# rebornsimulate

./: .gitignore  README.md  csvjson.json  data.json
backend/: .gitignore  Cargo.toml  csvjson.json
backend/src/: data.json  main.rs
backend/src/api/: json.rs  mod.rs  reborn.rs  response.rs
data/: data.csv  data.json  data2.json  df_Value.csv  res.csv  tool.ipynb  tool2.ipynb
data/API_SP.DYN.CBRT.IN_DS2_en_csv_v2_3732077/: Metadata_Indicator_API_SP.DYN.CBRT.IN_DS2_en_csv_v2_3732077.csv
frontend/: package-lock.json
frontend/src/: App.js
